tests/ui/parser/deli-ident-issue-2.stderr
error: mismatched closing delimiter: `]`
  --> $DIR/deli-ident-issue-2.rs:2:14
   |
LL |     if 1 < 2 {
   |              ^ unclosed delimiter
LL |         let _a = vec!];
   |                      ^ mismatched closing delimiter, may missing open `[`

error: aborting due to 1 previous error

